--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_applications.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_applications.htm
@@ -26,11 +26,11 @@ tool's <b>WindowActionDelegate</b>.</P>
 
 <P class="Code" >
 public void run(IAction action) {<br>
-&nbsp;&nbsp;&nbsp; SectionsDialog dialog = new SectionsDialog(window.getShell(),<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-ReadmeModelFactory.getInstance().getSections(selection));<br>
-&nbsp;&nbsp;&nbsp; dialog.open();<br>
-}</P>
+&nbsp;&nbsp;&nbsp;SectionsDialog dialog = new SectionsDialog(window.getShell(),<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ReadmeModelFactory.getInstance().getSections(selection));<br>
+&nbsp;&nbsp;&nbsp;dialog.open();<br>
+}
+</P>
 
 <P >
 The window action delegate for the action set uses the current selection in the resource navigator view (the
@@ -61,23 +61,25 @@ The <b> SectionsDialog</b> creates an SWT list to display the list of sections. 
 superclass.</P>
 <P CLASS="Code">
 protected Control createDialogArea(Composite parent) {<br>
-&nbsp;&nbsp;&nbsp; Composite composite = (Composite)super.createDialogArea(parent);<br>
-&nbsp;&nbsp;&nbsp; List list = new List(composite, SWT.BORDER);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; ListViewer viewer = new ListViewer(list);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; return composite;</P>
-<P CLASS="Code">
-}</P>
+&nbsp;&nbsp;&nbsp;Composite composite = (Composite)super.createDialogArea(parent);<br>
+&nbsp;&nbsp;&nbsp;List list = new List(composite, SWT.BORDER);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;ListViewer viewer = new ListViewer(list);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;return composite;<br>
+}
+</P>
+<br>
   </li>
-  <li><b>configureShell</b> is overridden to set an appropriate title for the shell window.<br>
-    &nbsp;
+  <li><p><b>configureShell</b> is overridden to set an appropriate title for the shell window.<p>
 <P CLASS="Code">
 protected void configureShell(Shell newShell) {<br>
-&nbsp;&nbsp;&nbsp; super.configureShell(newShell);<br>
-&nbsp;&nbsp;&nbsp; newShell.setText(&quot;Readme Sections&quot;);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-}</P>
+&nbsp;&nbsp;&nbsp;super.configureShell(newShell);<br>
+&nbsp;&nbsp;&nbsp;newShell.setText(&quot;Readme Sections&quot;);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+}
+</P>
+<br>
   </li>
   <li>
 <b>
