--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_standard.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_standard.htm
@@ -36,8 +36,7 @@ The standard dialogs are designed so that you can completely specify the dialog 
 </b> in action in the readme tool's view action:</P>
 <P CLASS="Code">
 MessageDialog.openInformation(<BR>
-&nbsp;&nbsp;&nbsp;
-view.getSite().getShell(),&quot;Readme Editor&quot;,&quot;View Action executed&quot;);</P>
+&nbsp;&nbsp;&nbsp;view.getSite().getShell(),&quot;Readme Editor&quot;,&quot;View Action executed&quot;);</P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
