--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_multipage.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_multipage.htm
@@ -55,28 +55,28 @@ The classes <a href="../reference/api/org/eclipse/ui/dialogs/WizardNewFileCreati
 WizardNewFileCreationPage</b></a> defines a common event handler for all SWT events which validates the page. This means the page will be validated whenever an event is received from a widget to which the page added a listener.</P>
 <P CLASS="Code">
 public void handleEvent(Event event) {<br>
-&nbsp;&nbsp;&nbsp; setPageComplete(validatePage());<br>
-}</P>
+&nbsp;&nbsp;&nbsp;setPageComplete(validatePage());<br>
+}
+</P>
 <P >
 Once the <b> CreateReadme1</b> page creates its controls, it sets the state of the page using
 <b>validatePage</b>.</P>
 <P CLASS="Code">
 public void createControl(Composite parent) {<br>
-&nbsp;&nbsp;&nbsp; super.createControl(parent);<br>
-&nbsp;&nbsp;&nbsp; // create controls, add listeners, and layout the page<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; // sample section generation checkboxes<br>
-&nbsp;&nbsp;&nbsp; sectionCheckbox = new Button(group,SWT.CHECK);<br>
-&nbsp;&nbsp;&nbsp; sectionCheckbox.setText(&quot;Generate sample section titles&quot;);<br>
-&nbsp;&nbsp;&nbsp; sectionCheckbox.setSelection(true);<br>
+&nbsp;&nbsp;&nbsp;super.createControl(parent);<br>
+&nbsp;&nbsp;&nbsp;// create controls, add listeners, and layout the page<br>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;// sample section generation checkboxes<br>
+&nbsp;&nbsp;&nbsp;sectionCheckbox = new Button(group,SWT.CHECK);<br>
+&nbsp;&nbsp;&nbsp;sectionCheckbox.setText(&quot;Generate sample section titles&quot;);<br>
+&nbsp;&nbsp;&nbsp;sectionCheckbox.setSelection(true);<br>
 <br>
-&nbsp;&nbsp;&nbsp; // we add a listener to this checkbox<br>
-&nbsp;&nbsp;&nbsp; sectionCheckbox.addListener(SWT.Selection,this);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; setPageComplete(validatePage());<br>
+&nbsp;&nbsp;&nbsp;// we add a listener to this checkbox<br>
+&nbsp;&nbsp;&nbsp;sectionCheckbox.addListener(SWT.Selection,this);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;setPageComplete(validatePage());<br>
+}
 </P>
-<P CLASS="Code">
-}</P>
 <P >
 Using this pattern, a wizard page can put all of its page validation code in one method,
 <b>validatePage()</b>. This method determines the initial state of the page and recalculates the state any time it receives an event from a widget on its page.</P>
@@ -88,19 +88,15 @@ inherited page validation behavior occurs in addition to any specific event hand
 page.</P>
 <P CLASS="Code">
 public void handleEvent(Event e) {<br>
-&nbsp;&nbsp;&nbsp; Widget source = e.widget;<br>
-&nbsp;&nbsp;&nbsp; if (source == sectionCheckbox) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; if (!sectionCheckbox.getSelection())<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-subsectionCheckbox.setSelection(false);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-subsectionCheckbox.setEnabled(sectionCheckbox.getSelection());<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; super.handleEvent(e);<br>
-}</P>
-<P CLASS="Code">
-&nbsp;</P>
-
+&nbsp;&nbsp;&nbsp;Widget source = e.widget;<br>
+&nbsp;&nbsp;&nbsp;if (source == sectionCheckbox) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if (!sectionCheckbox.getSelection())<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;subsectionCheckbox.setSelection(false);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;subsectionCheckbox.setEnabled(sectionCheckbox.getSelection());<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;super.handleEvent(e);<br>
+}
+</P>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 
