--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_wizarddialogs.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_wizarddialogs.htm
@@ -28,25 +28,18 @@ For example, the <b> ReadmeCreationWizard</b> could be launched independently by
 <b>ReadmeCreationWizard</b>. The following code snippet shows how this could be done from some action delegate. (The method assumes that we know the workbench and the selection.)</P>
 <P CLASS="Code">
 public void run(IAction action) {<br>
-&nbsp;&nbsp;&nbsp; // Create the wizard<br>
-&nbsp;&nbsp;&nbsp; ReadmeCreationWizard wizard = new ReadmeCreationWizard();<br>
-&nbsp;&nbsp;&nbsp; wizard.init(getWorkbench(), selection);<br>
+&nbsp;&nbsp;&nbsp;// Create the wizard<br>
+&nbsp;&nbsp;&nbsp;ReadmeCreationWizard wizard = new ReadmeCreationWizard();<br>
+&nbsp;&nbsp;&nbsp;wizard.init(getWorkbench(), selection);<br>
 <br>
-&nbsp;&nbsp;&nbsp; // Create the wizard dialog<br>
-&nbsp;&nbsp;&nbsp; WizardDialog dialog = new WizardDialog<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (getWorkbench().getActiveWorkbenchWindow().getShell(),wizard);</P>
-<P CLASS="Code">&nbsp;&nbsp;&nbsp; // Open the wizard dialog<br>
-&nbsp;&nbsp;&nbsp; dialog.open();</P>
-<P CLASS="Code">
+&nbsp;&nbsp;&nbsp;// Create the wizard dialog<br>
+&nbsp;&nbsp;&nbsp;WizardDialog dialog = new WizardDialog<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(getWorkbench().getActiveWorkbenchWindow().getShell(),wizard);<br>
+&nbsp;&nbsp;&nbsp;// Open the wizard dialog<br>
+&nbsp;&nbsp;&nbsp;dialog.open();<br>
 }</P>
 
-
-<P CLASS="Code">
-&nbsp;</P>
-
-
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
-
 
 </BODY>
 </HTML>
