--- a/bundles/org.eclipse.platform.doc.isv/guide/help_integration.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_integration.htm
@@ -39,13 +39,16 @@ To support this mode of operation, we need to make the following additions to ou
 <h4 >infoset_Guide.xml </h4>
 <P CLASS="Code">
 &lt;infoset id=&quot;infoset_SampleGuide&quot; label=&quot;Online Help Sample&quot;&nbsp;<br>
-&nbsp;&nbsp;&nbsp; href=&quot;doc/splash.html&quot; <b> standalone=&quot;true&quot;</b>&gt; </P>
+&nbsp;&nbsp;&nbsp;href=&quot;doc/splash.html&quot; <b> standalone=&quot;true&quot;</b>&gt;
+</P>
 <h4 >actions_All.xml</h4>
 <P CLASS="Code">
-&lt;actions infoview=&quot;com.example.helpexample.view_Contents&quot; <b> standalone=&quot;true&quot;</b>&gt; </P>
+&lt;actions infoview=&quot;com.example.helpexample.view_Contents&quot; <b> standalone=&quot;true&quot;</b>&gt;
+</P>
 <h4 >actions_View_Contents.xml</h4>
 <P CLASS="Code">
-&lt;actions infoview=&quot;com.example.helpexample.view_Contents&quot; <b> standalone=&quot;true&quot;</b>&gt; </P>
+&lt;actions infoview=&quot;com.example.helpexample.view_Contents&quot; <b> standalone=&quot;true&quot;</b>&gt;
+</P>
 <P >
 If another plug-in's infoset includes all of our topics, then our actions will not be used, and consequently our infoset will be empty. The infoset will not show up in the help contents view combo box. </P>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
