--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_infoset.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_infoset.htm
@@ -31,11 +31,10 @@ The following infoset has the id <b>infoset_SampleGuide</b> and declares one inf
 <H4>
 infoset_SampleGuide.xml</H4>
 <P CLASS="Code">
-&lt;infoset id=&quot;infoset_SampleGuide&quot; label=&quot;Online Help Sample&quot; href=&quot;doc/splash.html&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;infoview label=&quot;Content&quot; id=&quot;view_Contents&quot; /&gt; </P>
-<P CLASS="Code">
-&lt;/infoset&gt;</P>
+&lt;infoset id=&quot;infoset_SampleGuide&quot; label=&quot;Online Help Sample&quot; href=&quot;doc/splash.html&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;infoview label=&quot;Content&quot; id=&quot;view_Contents&quot; /&gt;<br>
+&lt;/infoset&gt;
+</P>
 <P >
 When the user selects the book called &quot;Online Help Sample&quot; he/she will see one possible infoview called &quot;Content&quot;. The splash page contained in
 <b> splash.html </b> is also displayed. </P>
@@ -50,17 +49,13 @@ Now we need to define the top-level structure that a user will see within our &q
 <H4>
 topics_view_Contents.xml</H4>
 <P CLASS="Code">
-&lt;topics id=&quot;topics_view_Contents&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic id=&quot;conceptsRoot&quot; label=&quot;Concepts&quot; /&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic id=&quot;tasksRoot&quot; label=&quot;Tasks&quot; /&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic id=&quot;funRoot&quot; label=&quot;Fun Things&quot; /&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic id=&quot;refRoot&quot; label=&quot;Reference&quot; /&gt; </P>
-<P CLASS="Code">
-&lt;/topics&gt;</P>
+&lt;topics id=&quot;topics_view_Contents&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic id=&quot;conceptsRoot&quot; label=&quot;Concepts&quot; /&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic id=&quot;tasksRoot&quot; label=&quot;Tasks&quot; /&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic id=&quot;funRoot&quot; label=&quot;Fun Things&quot; /&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic id=&quot;refRoot&quot; label=&quot;Reference&quot; /&gt;<br>
+&lt;/topics&gt;
+</P>
 <P >
 Now we need to &quot;wire in&quot; these topics into our &quot;Contents&quot; infoview. Once we've done that we can then proceed to wire in all of our other topics underneath the above top-level topics. We start wiring in the top-level topics using the following actions file. </P>
 
@@ -68,17 +63,13 @@ Now we need to &quot;wire in&quot; these topics into our &quot;Contents&quot; in
 <H4>
 actions_view_Contents.xml</H4>
 <P CLASS="Code">
-&lt;actions infoview=&quot;com.example.helpexample.view_Contents&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;insert </P>
-<P CLASS="Code">
-&nbsp;from=&quot;com.example.helpexample.topics_view_Contents&quot; </P>
-<P CLASS="Code">
-&nbsp;to=&quot;com.example.helpexample.view_Contents&quot; </P>
-<P CLASS="Code">
-&nbsp;as=&quot;child&quot;/&gt; </P>
-<P CLASS="Code">
-&lt;/actions&gt;</P>
+&lt;actions infoview=&quot;com.example.helpexample.view_Contents&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;insert<br>
+&nbsp;&nbsp;&nbsp;from=&quot;com.example.helpexample.topics_view_Contents&quot;<br>
+&nbsp;&nbsp;&nbsp;to=&quot;com.example.helpexample.view_Contents&quot;<br>
+&nbsp;&nbsp;&nbsp;as=&quot;child&quot;/&gt;<br>
+&lt;/actions&gt;
+</P>
 <P >The fully qualified topic id of the <b> topics</b>
 element &quot;<b>topics_view_Contents</b>&quot;&nbsp;in
 the topics file above is <b>com.example.helpexample.topics_view_Contents</b>. In the above actions file we
