--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
@@ -21,25 +21,28 @@ The one remaining piece of work is to update our <b> plugin.xml</b> to actually 
 infoset: </P>
 <P class="Code" >
 &lt;extension point=&quot;org.eclipse.help.contributions&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;infoset name=&quot;infoset_SampleGuide.xml&quot; /&gt;<br>
-&lt;/extension&gt; </P>
+&nbsp;&nbsp;&nbsp;&lt;infoset name=&quot;infoset_SampleGuide.xml&quot; /&gt;<br>
+&lt;/extension&gt;
+</P>
 <P >
 Next we contribute the top-level topics, and the actions file that wires them into our
 infoset: </P>
 <P class="Code" >
 &lt;extension point=&quot;org.eclipse.help.contributions&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;topics name=&quot;topics_view_Contents.xml&quot; /&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;actions name=&quot;actions_view_Contents.xml&quot; /&gt;<br>
-&lt;/extension&gt; </P>
+&nbsp;&nbsp;&nbsp;&lt;topics name=&quot;topics_view_Contents.xml&quot; /&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;actions name=&quot;actions_view_Contents.xml&quot; /&gt;<br>
+&lt;/extension&gt;
+</P>
 <P >
 Lastly we contribute the bulk of our topics and wire them in: </P>
-<P class="Code" >
+<P class="Code">
 &lt;extension point=&quot;org.eclipse.help.contributions&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;topics name=&quot;topics_Concepts.xml&quot; /&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;topics name=&quot;topics_Tasks.xml&quot; /&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;topics name=&quot;topics_Ref.xml /&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;actions name=&quot;actions_All.xml&quot; /&gt;<br>
-&lt;/extension&gt; </P>
+&nbsp;&nbsp;&nbsp;&lt;topics name=&quot;topics_Concepts.xml&quot; /&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topics name=&quot;topics_Tasks.xml&quot; /&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topics name=&quot;topics_Ref.xml /&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;actions name=&quot;actions_All.xml&quot; /&gt;<br>
+&lt;/extension&gt;
+</P>
 <P >
 That's it. If you copy your plug-in directory to the platform's <b> plugins</b> directory, start the platform, and choose
 <b> Help-&gt;Help Contents</b>, you should see the following in the &quot;Contents&quot;
