--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_topics.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_topics.htm
@@ -33,50 +33,37 @@ Our files look like this:</P>
 
 <H4>topics_Concepts.xml</H4>
 <P CLASS="Code">
-&lt;topics id=&quot;conceptsAll&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic label=&quot;Concept1&quot; href=&quot;doc/concepts/concept1.html&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; &lt;topic label=&quot;Concept1_1&quot; href=&quot;doc/concepts/concept1_1.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; &lt;topic label=&quot;Concept1_2&quot; href=&quot;doc/concepts/concept1_2.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;/topic&gt;&nbsp;<br>
- &lt;/topics&gt;</P>
-
+&lt;topics id=&quot;conceptsAll&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Concept1&quot; href=&quot;doc/concepts/concept1.html&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Concept1_1&quot; href=&quot;doc/concepts/concept1_1.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Concept1_2&quot; href=&quot;doc/concepts/concept1_2.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/topic&gt;&nbsp;<br>
+&lt;/topics&gt;
+</P>
 
 <H4>
 topics_Tasks.xml</H4>
 <P CLASS="Code">
-&lt;topics id=&quot;tasksAll&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic id=&quot;plainTasks&quot; label=&quot;Plain Stuff&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic label=&quot;Task1&quot; href=&quot;doc/tasks/task1.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic label=&quot;Task2&quot; href=&quot;doc/tasks/task2.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;/topic&gt;     &lt;topic id=&quot;funTasks&quot; label=&quot;Fun Stuff&quot; &gt; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; &lt;topic label=&quot;Task3_1&quot; href=&quot;doc/tasks/task3_1.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; &lt;topic label=&quot;Task3_2&quot; href=&quot;doc/tasks/task3_2.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;/topic&gt; </P>
-<P CLASS="Code">
-&lt;/topics&gt;</P>
-
+&lt;topics id=&quot;tasksAll&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic id=&quot;plainTasks&quot; label=&quot;Plain Stuff&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Task1&quot; href=&quot;doc/tasks/task1.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Task2&quot; href=&quot;doc/tasks/task2.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/topic&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic id=&quot;funTasks&quot; label=&quot;Fun Stuff&quot; &gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Task3_1&quot; href=&quot;doc/tasks/task3_1.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Task3_2&quot; href=&quot;doc/tasks/task3_2.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/topic&gt;<br>
+&lt;/topics&gt;
+</P>
 
 <H4>
 topics_Ref.xml</H4>
 <P CLASS="Code">
-&lt;topics id=&quot;refAll&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic label=&quot;Ref1&quot; href=&quot;doc/ref/ref1.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic label=&quot;Ref2&quot; href=&quot;doc/ref/ref2.html&quot;/&gt; </P>
-<P CLASS="Code">
-&lt;/topics&gt;</P>
+&lt;topics id=&quot;refAll&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Ref1&quot; href=&quot;doc/ref/ref1.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Ref2&quot; href=&quot;doc/ref/ref2.html&quot;/&gt;<br>
+&lt;/topics&gt;
+</P>
 <P >
 Topics are contributed as part of the topics container element. A topic can be a simple link to content.&nbsp;
 For example, &quot;Task1&quot; provides a <b>label</b>
