--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_wiring.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_wiring.htm
@@ -70,39 +70,25 @@ infoview. To do this we need another actions file that we will call <b> actions_
 <H4>
 actions_All.xml</H4>
 <P CLASS="Code">
-&lt;actions infoview=&quot;com.example.helpexample.view_Contents&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;insert </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; from=&quot;com.example.helpexample.conceptsAll&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; to=&quot;com.example.helpexample.conceptsRoot&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; as=&quot;child&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;insert </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; from=&quot;com.example.helpexample.refAll&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; to=&quot;com.example.helpexample.refRoot&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; as=&quot;child&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;insert </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; from=&quot;com.example.helpexample.plainTasks&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; to=&quot;com.example.helpexample.tasksRoot&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; as=&quot;child&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;insert </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; from=&quot;com.example.helpexample.funTasks&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; to=&quot;com.example.helpexample.funRoot&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; as=&quot;child&quot;/&gt; &lt;/actions&gt;</P>
+&lt;actions infoview=&quot;com.example.helpexample.view_Contents&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;insert<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from=&quot;com.example.helpexample.conceptsAll&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to=&quot;com.example.helpexample.conceptsRoot&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as=&quot;child&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;insert<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from=&quot;com.example.helpexample.refAll&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to=&quot;com.example.helpexample.refRoot&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as=&quot;child&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;insert<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from=&quot;com.example.helpexample.plainTasks&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to=&quot;com.example.helpexample.tasksRoot&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as=&quot;child&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;insert<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;from=&quot;com.example.helpexample.funTasks&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to=&quot;com.example.helpexample.funRoot&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;as=&quot;child&quot;/&gt;<br>
+&lt;/actions&gt;
+</P>
 <P >
 Recall that we had a number of task related html files, and the structure/navigation of these files was defined by
 <b> topics_tasks.xml </b> as follows: </P>
@@ -111,54 +97,37 @@ Recall that we had a number of task related html files, and the structure/naviga
 <H4>
 topics_tasks.xml</H4>
 <P CLASS="Code">
-&lt;topics id=&quot;tasksAll&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic id=&quot;plainTasks&quot; label=&quot;Plain Stuff&quot;&gt; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; &lt;topic label=&quot;Task1&quot; href=&quot;doc/tasks/task1.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; &lt;topic label=&quot;Task2&quot; href=&quot;doc/tasks/task2.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;/topic&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;topic id=&quot;funTasks&quot; label=&quot;Fun Stuff&quot; &gt; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; &lt;topic label=&quot;Task3_1&quot; href=&quot;doc/tasks/task3_1.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; &lt;topic label=&quot;Task3_2&quot; href=&quot;doc/tasks/task3_2.html&quot;/&gt; </P>
-<P CLASS="Code">
-&nbsp;&lt;/topic&gt; </P>
-<P CLASS="Code">
-&lt;/topics&gt;</P>
+&lt;topics id=&quot;tasksAll&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic id=&quot;plainTasks&quot; label=&quot;Plain Stuff&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Task1&quot; href=&quot;doc/tasks/task1.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Task2&quot; href=&quot;doc/tasks/task2.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/topic&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;topic id=&quot;funTasks&quot; label=&quot;Fun Stuff&quot; &gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Task3_1&quot; href=&quot;doc/tasks/task3_1.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;topic label=&quot;Task3_2&quot; href=&quot;doc/tasks/task3_2.html&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/topic&gt;<br>
+&lt;/topics&gt;
+</P>
 <P >
 In the above actions file we use the insert as child action to take the topic with
 id <b>com.example.helpexample.plainTasks</b> and insert it and its subtopics under the topic with id
 <b> com.example.helpexample..tasksRoot</b> </P>
 <P CLASS="Code">
-&lt;insert </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; from=&quot;com.example.helpexample.plainTasks&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; to=&quot;com.example.helpexample.tasksRoot&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; as=&quot;child&quot;/&gt;</P>
+&lt;insert<br>
+&nbsp;&nbsp;&nbsp;from=&quot;com.example.helpexample.plainTasks&quot;<br>
+&nbsp;&nbsp;&nbsp;to=&quot;com.example.helpexample.tasksRoot&quot;<br>
+&nbsp;&nbsp;&nbsp;as=&quot;child&quot;/&gt;
+</P>
 <P >
 The actions file also takes some of our more entertaining tasks and inserts them into the &quot;Fun Things&quot; area of the web using the following action. </P>
 <P CLASS="Code">
-&lt;insert </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; from=&quot;com.example.helpexample.funTasks&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; to=&quot;com.example.helpexample.funRoot&quot; </P>
-<P CLASS="Code">
-&nbsp;&nbsp;&nbsp;&nbsp; as=&quot;child&quot;/&gt;</P>
+&lt;insert<br>
+&nbsp;&nbsp;&nbsp;from=&quot;com.example.helpexample.funTasks&quot;<br>
+&nbsp;&nbsp;&nbsp;to=&quot;com.example.helpexample.funRoot&quot;<br>
+&nbsp;&nbsp;&nbsp;as=&quot;child&quot;/&gt;
+</P>
 
-
-<P CLASS="Code">
-&nbsp;</P>
-
-
-<p CLASS="Code"><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 
 
 </BODY>
