--- a/bundles/org.eclipse.platform.doc.isv/guide/jface_viewers.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/jface_viewers.htm
@@ -26,8 +26,10 @@ that you would otherwise have to implement yourself.&nbsp;</P>
 <b>ReadmeSectionsView</b>.</P>
 <P CLASS="Code">
 public void createPartControl(Composite parent) {<br>
-viewer = new ListViewer(parent);<br>
-...</P>
+&nbsp;&nbsp;&nbsp;viewer = new ListViewer(parent);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+}
+</P>
 <P CLASS="Note">
 Note:&nbsp; Viewers can be used to provide the implementation for both workbench views and editors. The term viewer does not imply that they are only useful for implementing views. For example, the
 <b> TextViewer</b> is used in the implementation in many of the workbench and plug-in editors.</P>
