--- a/bundles/org.eclipse.platform.doc.isv/guide/preferences_prop.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/preferences_prop.htm
@@ -24,24 +24,25 @@ A resource's property page is invoked using the <b>Properties </b>menu in the
 resource navigator view.&nbsp; This menu is available when a single resource is
 selected.&nbsp;</P>
 <P >The readme tool contributes two property pages.</P>
-<P class="Code" >
-  &lt;extension<br>
-&nbsp;&nbsp;&nbsp; point = &quot;org.eclipse.ui.propertyPages&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;page<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;org.eclipse.ui.examples.readmetool.FilePage&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name="Readme Tool"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; objectClass=&quot;org.eclipse.core.resources.IFile&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.examples.readmetool.ReadmeFilePropertyPage&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; nameFilter=&quot;*.readme&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/page><br>
-&nbsp;&nbsp;&nbsp; &lt;page<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id="org.eclipse.ui.examples.readmetool.FilePage2"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name="More Readme Info"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; objectClass=&quot;org.eclipse.core.resources.IFile&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class="org.eclipse.ui.examples.readmetool.ReadmeFilePropertyPage2"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; nameFilter=&quot;*.readme&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/page><br>
-  &lt;/extension></P>
+<P class="Code">
+&lt;extension<br>
+&nbsp;&nbsp;&nbsp;point = &quot;org.eclipse.ui.propertyPages&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;page<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.ui.examples.readmetool.FilePage&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name="Readme Tool"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;objectClass=&quot;org.eclipse.core.resources.IFile&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.examples.readmetool.ReadmeFilePropertyPage&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;nameFilter=&quot;*.readme&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/page><br>
+&nbsp;&nbsp;&nbsp;&lt;page<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id="org.eclipse.ui.examples.readmetool.FilePage2"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name="More Readme Info"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;objectClass=&quot;org.eclipse.core.resources.IFile&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class="org.eclipse.ui.examples.readmetool.ReadmeFilePropertyPage2"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;nameFilter=&quot;*.readme&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/page><br>
+&lt;/extension>
+</P>
 <P >
 Both pages are contributed for objects of type <b><a href="../reference/api/org/eclipse/core/resources/IFile.html"> IFile</a></b> with a
 <b>.readme</b> file extension. </P>
@@ -69,9 +70,10 @@ IResource resource = (IResource) getElement();<br>
 ...<br>
 IAdaptable sections = getSections(resource);<br>
 if (sections instanceof AdaptableList) {<br>
-&nbsp;&nbsp;&nbsp; AdaptableList list = (AdaptableList)sections;<br>
-&nbsp;&nbsp;&nbsp; label = createLabel(panel, String.valueOf(list.size()));<br>
-...</P>
+&nbsp;&nbsp;&nbsp;AdaptableList list = (AdaptableList)sections;<br>
+&nbsp;&nbsp;&nbsp;label = createLabel(panel, String.valueOf(list.size()));<br>
+...
+</P>
 <P >
 When a property is computed, there is no need for corresponding logic to save the value, since the user cannot update this value.</P>
 <P >
@@ -85,23 +87,24 @@ to set new property values based on user selections in the properties page.</P>
 The following snippet shows a checkbox value being initialized from a property on a property page's element.</P>
 <P CLASS="Code">
 private void initializeValues() {<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; IResource resource = (IResource) getElement();<br>
-&nbsp;&nbsp;&nbsp; label.setText(resource.getPersistentProperty(&quot;MyProperty&quot;));<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-}</P>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;IResource resource = (IResource) getElement();<br>
+&nbsp;&nbsp;&nbsp;label.setText(resource.getPersistentProperty(&quot;MyProperty&quot;));<br>
+&nbsp;&nbsp;&nbsp;...<br>
+}
+</P>
 <P >
 The corresponding code for saving the checkbox value back into the property looks like this:</P>
 <P CLASS="Code">
 private void storeValues() {<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; IResource resource = (IResource) getElement();<br>
-&nbsp;&nbsp;&nbsp; resource.setPersistentProperty(&quot;MyProperty&quot;,
-label.getText());<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-}</P>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;IResource resource = (IResource) getElement();<br>
+&nbsp;&nbsp;&nbsp;resource.setPersistentProperty(&quot;MyProperty&quot;, label.getText());<br>
+&nbsp;&nbsp;&nbsp;...<br>
+}
+</P>
 
-<p CLASS="Code"><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 
 </BODY>
 </HTML>
