--- a/bundles/org.eclipse.platform.doc.isv/guide/scripting.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/scripting.htm
@@ -111,11 +111,11 @@ script console.
 allows you to create Java objects and use their public API.&nbsp; The JavaScript property
 <b>Packages</b> can be used for
 this purpose.&nbsp; The following snippet uses the <b>Packages</b>
-property to obtain the install URL and the splash&nbsp;bitmap object.
-<p>&nbsp;
-<p class="Code">var install =
-Packages.org.eclipse.core.boot.BootLoader.getInstallURL();<br>
+property to obtain the install URL and the splash&nbsp;bitmap object.</p>
+<p class="Code">
+var install = Packages.org.eclipse.core.boot.BootLoader.getInstallURL();<br>
 var splash = new Packages.java.net.URL(install,"splash.bmp");
+</p>
 <h2>
 Writing user interface scripts</h2>
  SWT-based user
@@ -279,37 +279,34 @@ In this case, they are implemented as reflective callbacks to methods on the reg
 rather than as calls to "inline" JavaScript functions.
 <h2>
 Explicit use of script adapters</h2>
-We've seen how scripts can be added and managed by the workbench user.&nbsp;
+<p>We've seen how scripts can be added and managed by the workbench user.&nbsp;
 Scripts can also be supplied as extensions by plug-ins.&nbsp; This is done by specifying script adapters in place
 of implementation classes as the <b>class</b> attribute
 in the extension definition.&nbsp; The adapter specification includes the name of the actual script to execute.&nbsp;
 For example, the following markup from the scripting examples <b>plugin.xml
 </b>contributes an action set and specifies a <a href="../reference/api/org/eclipse/scripting/ScriptAdapterWorkbenchAction.html"><b>ScriptAdapterWorkbenchAction</b></a>
 with the script name as the <b>class</b>.&nbsp; The
-relevant markup is in bold.
-<p class="Code"><br>
-   &lt;extension point = &quot;org.eclipse.ui.actionSets&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;actionSet&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;scriptActionSet&quot;&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label=&quot;%S_Script_Examples&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; visible="true"><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;action id          = "scriptaction1"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; menubarPath =
-&quot;window/org_eclipse_scripting_examples/slot1&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; toolbarPath =
-&quot;%S_Script_Examples&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label       =
-&quot;%S_Scripted_Action_Example&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; tooltip     =
-&quot;%S_Perform_Scripted_JavaScript_Action&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; icon        =
-&quot;icons/full/ctool16/script_scp.gif&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>class=<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &quot;org.eclipse.scripting/org.eclipse.scripting.ScriptAdapterWorkbenchAction:file=platform:/plugin/org.eclipse.scripting.examples/excalibur.js
-language=javascript&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b>&lt;/action><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...</p>
+relevant markup is in bold.</p>
+<p class="Code">
+&lt;extension point = &quot;org.eclipse.ui.actionSets&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;actionSet&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;scriptActionSet&quot;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label=&quot;%S_Script_Examples&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;visible="true"><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;action<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id = "scriptaction1"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;menubarPath = &quot;window/org_eclipse_scripting_examples/slot1&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;toolbarPath = &quot;%S_Script_Examples&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label = &quot;%S_Scripted_Action_Example&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;tooltip = &quot;%S_Perform_Scripted_JavaScript_Action&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;icon = &quot;icons/full/ctool16/script_scp.gif&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>class = &quot;org.eclipse.scripting/org.eclipse.scripting.ScriptAdapterWorkbenchAction&quot;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;file = &quot;platform:/plugin/org.eclipse.scripting.examples/excalibur.js&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;language = &quot;javascript&quot;&gt;</b><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;/action><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...
+</p>
 <p>Standard
 script adapters can be referenced directly as part of the <b> plugin.xml</b> specification
 of any plug-in. The list of supported adapters can be found in the <a href="../reference/api/org/eclipse/scripting/package-summary.html"><b>org.eclipse.scripting</b></a>
