--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_layouts.htm
@@ -54,21 +54,24 @@ See <a href="http://www.eclipse.org/articles/Article-Understanding%20Layouts/Und
 Layouts in SWT</a>&nbsp; for further discussion and pictures demonstrating these concepts. </P>
 <P >
 The following code snippet shows the simple case of an application using a resize callback to size a label to the size of its parent shell.</P>
-<P CLASS="Code">Display display = new Display ();<br>
+<P CLASS="Code">
+Display display = new Display ();<br>
 Shell shell = new Shell (display);<br>
 Label label = new Label (shell, SWT.CENTER);<br>
 shell.addControlListener(new ControlAdapter() {<br>
-&nbsp;&nbsp;&nbsp; public void controlResized(ControlEvent e) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label.setBounds (shell.getClientArea ());<br>
-&nbsp;&nbsp;&nbsp; }<br>
-});</P>
+&nbsp;&nbsp;&nbsp;public void controlResized(ControlEvent e) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label.setBounds (shell.getClientArea ());<br>
+&nbsp;&nbsp;&nbsp;}<br>
+});
+</P>
 <P >
 The next snippet uses a layout to achieve the same effect:</P>
 <P CLASS="Code">
 Display display = new Display ();<br>
 Shell shell = new Shell (display);<br>
 Label label = new Label (shell, SWT.CENTER);<br>
-shell.setLayout(new FillLayout());</P>
+shell.setLayout(new FillLayout());
+</P>
 <P >
 Even for this simple example, using a layout reduces the application code. For more complex layouts, the simplification is much greater.</P>
 <P >
