--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets.htm
@@ -56,18 +56,20 @@ Dispose the display.</li>
 </ul>
 <P >
 The following code snippet is adapted from the <b> org.eclipse.swt.examples.helloworld.HelloWorld2</b> application. Since the application only displays the string &quot;Hello World,&quot; it does not need to register for any widget events.</P>
-<P CLASS="Code">public static void main (String [] args) {<br>
-&nbsp;&nbsp;&nbsp; Display display = new Display ();<br>
-&nbsp;&nbsp;&nbsp; Shell shell = new Shell (display);<br>
-&nbsp;&nbsp;&nbsp; Label label = new Label (shell, SWT.CENTER);<br>
-&nbsp;&nbsp;&nbsp; label.setText (&quot;Hello_world&quot;);<br>
-&nbsp;&nbsp;&nbsp; label.setBounds (shell.getClientArea ());<br>
-&nbsp;&nbsp;&nbsp; shell.open ();<br>
-&nbsp;&nbsp;&nbsp; while (!shell.isDisposed ()) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; if (!display.readAndDispatch ()) display.sleep ();<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; display.dispose ();<br>
-}</P>
+<P CLASS="Code">
+public static void main (String [] args) {<br>
+&nbsp;&nbsp;&nbsp;Display display = new Display ();<br>
+&nbsp;&nbsp;&nbsp;Shell shell = new Shell (display);<br>
+&nbsp;&nbsp;&nbsp;Label label = new Label (shell, SWT.CENTER);<br>
+&nbsp;&nbsp;&nbsp;label.setText (&quot;Hello_world&quot;);<br>
+&nbsp;&nbsp;&nbsp;label.setBounds (shell.getClientArea ());<br>
+&nbsp;&nbsp;&nbsp;shell.open ();<br>
+&nbsp;&nbsp;&nbsp;while (!shell.isDisposed ()) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if (!display.readAndDispatch ()) display.sleep ();<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;display.dispose ();<br>
+}
+</P>
 
 <H4>
 Display</H4>
