--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_events.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_events.htm
@@ -21,15 +21,17 @@ a widget. Most of the application logic is implemented as responses to user even
 The basic pattern is that you add a listener to some widget that you have created. When the appropriate event occurs,
 the listener code is executed. This simple example is adapted from
 <b>org.eclipse.swt.examples.helloworld.HelloWorld3</b>.</P>
-<P CLASS="Code">Display display = new Display ();<br>
+<P CLASS="Code">
+Display display = new Display ();<br>
 Shell shell = new Shell (display);<br>
 Label label = new Label (shell, SWT.CENTER);<br>
 ...<br>
 shell.addControlListener(new ControlAdapter() {<br>
-&nbsp;&nbsp;&nbsp; public void controlResized(ControlEvent e) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label.setBounds (shell.getClientArea ());<br>
-&nbsp;&nbsp;&nbsp; }<br>
-});</P>
+&nbsp;&nbsp;&nbsp;public void controlResized(ControlEvent e) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label.setBounds (shell.getClientArea ());<br>
+&nbsp;&nbsp;&nbsp;}<br>
+});
+</P>
 <P >
 For each type of listener, there is an interface that defines the listener (<b>XyzListener</b>), a class that provides event information
 (<b>XyzEvent</b>), and an API method to add the listener (<b>addXyzListener</b>).&nbsp;
@@ -341,42 +343,24 @@ The untyped mechanism relies on a constant to identify the type of event and def
 <P CLASS="Code">
 Shell shell = new Shell();<br>
 Listener listener = new Listener() {<br>
-&nbsp;&nbsp;&nbsp; public void handleEvent(Event e) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; switch (e.type) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; case
-SWT.Resize:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-System.out.println(&quot;Resize received.&quot;);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-break;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; case
-SWT.Paint:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-System.out.println(Paint received.&quot;);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-break;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; default:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-System.out.println(&quot;Unknown event received&quot;);</P>
-<P CLASS="Code">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; }</P>
-<P CLASS="Code">&nbsp;&nbsp;&nbsp; }<br>
-});<br>
+&nbsp;&nbsp;&nbsp;public void handleEvent(Event e) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;switch (e.type) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;case SWT.Resize:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;Resize received.&quot;);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;case SWT.Paint:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(Paint received.&quot;);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;default:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;Unknown event received&quot;);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;}<br>
+};<br>
 shell.addListener(SWT.Resize, listener);<br>
-shell.addListener(SWT.Paint, listener);</P>
+shell.addListener(SWT.Paint, listener);
+</P>
 
-
-
-
-<P CLASS="Code">
-&nbsp;</P>
-
-
-
-
-<p CLASS="Code"><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
-
-
-
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 
 </BODY>
 </HTML>
