--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
@@ -33,17 +33,19 @@ configuring them into an
 perspective.</P>
 
 
-<P class="Code" >&lt;extension&nbsp;<br>
-&nbsp;&nbsp;&nbsp; point=&quot;org.eclipse.ui.perspectiveExtensions&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;perspectiveExtension&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; targetID=&quot;org.eclipse.debug.ui.DebugPerspective&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;actionSet id=&quot;org.eclipse.jdt.ui.JavaActionSet&quot;/&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;view id=&quot;org.eclipse.jdt.debug.ui.DisplayView&quot;&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-relative=&quot;org.eclipse.debug.ui.InspectorView&quot;&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; relationship="stack"/><br>
-&nbsp;&nbsp;&nbsp; &lt;/perspectiveExtension><br>
-&lt;/extension></P>
+<P class="Code" >
+&lt;extension&nbsp;<br>
+&nbsp;&nbsp;&nbsp;point=&quot;org.eclipse.ui.perspectiveExtensions&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;perspectiveExtension&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;targetID=&quot;org.eclipse.debug.ui.DebugPerspective&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;actionSet id=&quot;org.eclipse.jdt.ui.JavaActionSet&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;view<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.jdt.debug.ui.DisplayView&quot;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;relative=&quot;org.eclipse.debug.ui.InspectorView&quot;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;relationship="stack"/><br>
+&nbsp;&nbsp;&nbsp;&lt;/perspectiveExtension><br>
+&lt;/extension>
+</P>
 
 
 <P >The <b>targetID</b> is the id of the perspective
