--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_resourceFilters.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_resourceFilters.htm
@@ -23,9 +23,10 @@ The markup for the resource filters extension is simple.&nbsp; The following is
 from the workbench <b>plugin.xml</b>.</P>
 <P class="Code" >
 &lt;extension<br>
-&nbsp;&nbsp;&nbsp; point= &quot;org.eclipse.ui.resourceFilters&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;filter pattern = ".*" selected = "false"/><br>
-&lt;/extension></P>
+&nbsp;&nbsp;&nbsp;point= &quot;org.eclipse.ui.resourceFilters&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;filter pattern = ".*" selected = "false"/><br>
+&lt;/extension>
+</P>
 <P >The filters can be enabled by the user using the resource navigator's local
 pull-down menu.</P>
 
