--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_editors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_editors.htm
@@ -50,19 +50,18 @@ workbench outline view.&nbsp;&nbsp;</P>
 <P >
  The configuration for the editor extension is defined as follows.</P>
 <P class="Code" >
-   &lt;extension<br>
-&nbsp;&nbsp;&nbsp; point = &quot;org.eclipse.ui.editors&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;editor<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id = &quot;org.eclipse.ui.examples.readmetool.ReadmeEditor&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name="Readme File Editor"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-icon=&quot;icons/basic/obj16/editor.gif&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.examples.readmetool.ReadmeEditor&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; extensions="readme"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-contributorClass=&quot;org.eclipse.ui.examples.readmetool.ReadmeEditorActionBarContributor&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/editor><br>
-   &lt;/extension></P>
+&lt;extension<br>
+&nbsp;&nbsp;&nbsp;point = &quot;org.eclipse.ui.editors&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;editor<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id = &quot;org.eclipse.ui.examples.readmetool.ReadmeEditor&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name="Readme File Editor"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;icon=&quot;icons/basic/obj16/editor.gif&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.examples.readmetool.ReadmeEditor&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;extensions="readme"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;contributorClass=&quot;org.eclipse.ui.examples.readmetool.ReadmeEditorActionBarContributor&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/editor><br>
+&lt;/extension>
+</P>
 <P >
 We see the familiar configuration markup for <b>id</b>,
 <b>name</b>,
@@ -81,20 +80,21 @@ In <b>ReadmeEditorActionBarContributor</b>, we contribute three actions,
 These are set up in the constructor.</P>
 <P class="Code" >
 public ReadmeEditorActionBarContributor() {<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; action1 = new EditorAction("&amp;Editor Action1");<br>
-&nbsp;&nbsp;&nbsp; action1.setToolTipText("Readme Editor Action1");<br>
-&nbsp;&nbsp;&nbsp; action1.setImageDescriptor(ReadmeImages.EDITOR_ACTION1_IMAGE);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; action2 = new EditorAction("&amp;Editor Action2");<br>
-&nbsp;&nbsp;&nbsp; action2.setToolTipText("Readme Editor Action2");<br>
-&nbsp;&nbsp;&nbsp; action2.setImageDescriptor(ReadmeImages.EDITOR_ACTION2_IMAGE);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; action3 = new EditorAction("&amp;Editor Action3");<br>
-&nbsp;&nbsp;&nbsp; action3.setToolTipText("Readme Editor Action3");<br>
-&nbsp;&nbsp;&nbsp; action3.setImageDescriptor(ReadmeImages.EDITOR_ACTION3_IMAGE);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-}</P>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;action1 = new EditorAction("&amp;Editor Action1");<br>
+&nbsp;&nbsp;&nbsp;action1.setToolTipText("Readme Editor Action1");<br>
+&nbsp;&nbsp;&nbsp;action1.setImageDescriptor(ReadmeImages.EDITOR_ACTION1_IMAGE);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;action2 = new EditorAction("&amp;Editor Action2");<br>
+&nbsp;&nbsp;&nbsp;action2.setToolTipText("Readme Editor Action2");<br>
+&nbsp;&nbsp;&nbsp;action2.setImageDescriptor(ReadmeImages.EDITOR_ACTION2_IMAGE);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;action3 = new EditorAction("&amp;Editor Action3");<br>
+&nbsp;&nbsp;&nbsp;action3.setToolTipText("Readme Editor Action3");<br>
+&nbsp;&nbsp;&nbsp;action3.setImageDescriptor(ReadmeImages.EDITOR_ACTION3_IMAGE);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+}
+</P>
 <P >
 The names and icons for the actions are set up in the code rather than in the <b>plugin.xml</b>.&nbsp;
 Note how similar this information is to the
@@ -108,12 +108,13 @@ to be installed in the workbench menus and tool bar, the <b>setActiveEditor
 </b>message is sent to the contributor.&nbsp; The contributor connects the editor actions to a specific editor.&nbsp;&nbsp;</P>
 <P class="Code" >
 public void setActiveEditor(IEditorPart editor) {<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; action1.setActiveEditor(editor);<br>
-&nbsp;&nbsp;&nbsp; action2.setActiveEditor(editor);<br>
-&nbsp;&nbsp;&nbsp; action3.setActiveEditor(editor);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-}</P>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;action1.setActiveEditor(editor);<br>
+&nbsp;&nbsp;&nbsp;action2.setActiveEditor(editor);<br>
+&nbsp;&nbsp;&nbsp;action3.setActiveEditor(editor);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+}
+</P>
 <P >
 As you can see, the actions show up in the workbench menu and tool bar when a readme editor is active. </P>
 
