--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_popupMenus.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_popupMenus.htm
@@ -31,22 +31,22 @@ type (<b>objectContribution</b>).&nbsp;</P>
 <P >
 The readme tool defines an <b>objectContribution</b>. The markup looks like this.</P>
 <P class="Code" >
-  &lt;extension point = &quot;org.eclipse.ui.popupMenus&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;objectContribution<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;org.eclipse.ui.examples.readmetool&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; objectClass=&quot;org.eclipse.core.resources.IFile&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; nameFilter=&quot;*.readme&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;action id="org.eclipse.ui.examples.readmetool.action1"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label="Show Readme Action"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-icon=&quot;icons/basic/ctool16/openbrwsr.gif&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; menuBarPath=&quot;additions&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; helpContextId=&quot;org.eclipse.ui.examples.readmetool.open_browser_action_context&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.examples.readmetool.PopupMenuActionDelegate&quot;&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; enablesFor=&quot;1&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/action><br>
-&nbsp;&nbsp;&nbsp; &lt;/objectContribution><br>
-  &lt;/extension></P>
+&lt;extension point = &quot;org.eclipse.ui.popupMenus&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;objectContribution<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.ui.examples.readmetool&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;objectClass=&quot;org.eclipse.core.resources.IFile&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;nameFilter=&quot;*.readme&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;action id="org.eclipse.ui.examples.readmetool.action1"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label="Show Readme Action"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;icon=&quot;icons/basic/ctool16/openbrwsr.gif&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;menuBarPath=&quot;additions&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;helpContextId=&quot;org.eclipse.ui.examples.readmetool.open_browser_action_context&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.examples.readmetool.PopupMenuActionDelegate&quot;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;enablesFor=&quot;1&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;/action><br>
+&nbsp;&nbsp;&nbsp;&lt;/objectContribution><br>
+&lt;/extension>
+</P>
 <P >
 The action &quot;Show Readme Action&quot; is contributed for the object class <a href="../reference/api/org/eclipse/core/resources/IFile.html"><b>IFile</b></a>. This means that any view containing
 <a href="../reference/api/org/eclipse/core/resources/IFile.html"><b>IFile</b></a>
@@ -59,13 +59,14 @@ Since the popup is declared as an <b>objectContribution</b>,
 the supplied class must implement <b><a href="../reference/api/org/eclipse/ui/IObjectActionDelegate.html">IObjectActionDelegate</a></b>.&nbsp;</P>
 <P >
 The action is implemented in <b>PopupMenuActionDelegate</b>.&nbsp;&nbsp;</P>
-<P class="Code" >
+<P class="Code">
 public void run(IAction action) {<br>
-&nbsp;&nbsp;&nbsp; MessageDialog.openInformation(<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; this.part.getSite().getShell(),<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "Readme Example",<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "Popup Menu Action executed");<br>
-}</P>
+&nbsp;&nbsp;&nbsp;MessageDialog.openInformation(<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;this.part.getSite().getShell(),<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"Readme Example",<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"Popup Menu Action executed");<br>
+}
+</P>
 <P >
 We can see the popup menu contribution when we select a readme file from the resource navigator.</P>
 
@@ -79,20 +80,20 @@ be <b>popupMenuContribution</b>  .</P>
 A viewer contribution is used to contribute to a specific view or editor's popup menu using its id. The following markup shows how a plug-in could register a specific action in the workbench task list popup menu.</P>
 <P CLASS="Code">
 &lt;extension point=&quot;org.eclipse.ui.popupMenus&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;viewerContribution<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;com.example.C2&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; targetID=&quot;org.eclipse.ui.views.TaskList&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;action id=&quot;com.example.showExample&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-label=&quot;&amp;amp;Show Example&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; menubarPath=&quot;additions&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-icon=&quot;icons/showExample.gif&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; helpContextId=&quot;com.example.show_action_context&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;com.example.actions.ExampleShowActionDelegate&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/action&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/viewerContribution&gt;<br>
-&lt;/extension&gt; </P>
+&nbsp;&nbsp;&nbsp;&lt;viewerContribution<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;com.example.C2&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;targetID=&quot;org.eclipse.ui.views.TaskList&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;action<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;com.example.showExample&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label=&quot;&amp;amp;Show Example&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;menubarPath=&quot;additions&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;icon=&quot;icons/showExample.gif&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;helpContextId=&quot;com.example.show_action_context&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;com.example.actions.ExampleShowActionDelegate&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;/action&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/viewerContribution&gt;<br>
+&lt;/extension&gt;
+</P>
 <P >
 If the extension is a <b>viewerContribution</b>, the
 supplied class must implement the
