--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_plugin.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_plugin.htm
@@ -20,22 +20,24 @@ So far, we've been looking at the different extensions that are provided by the 
 Plug-in definition</H3>
 <P >
 The readme tool plug-in is defined at the top of the <b> plugin.xml</b> file.</P>
-<P class="Code" >
+<P class="Code">
 &lt;plugin<br>
-&nbsp;&nbsp;&nbsp; name = "Readme File Editing Tool"<br>
-&nbsp;&nbsp;&nbsp; id = &quot;org.eclipse.ui.examples.readmetool&quot;<br>
-&nbsp;&nbsp;&nbsp; version = "0.9"<br>
-&nbsp;&nbsp;&nbsp; provider-name = "Object Technology International, Inc."<br>
-&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.examples.readmetool.ReadmePlugin&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;name = "Readme File Editing Tool"<br>
+&nbsp;&nbsp;&nbsp;id = &quot;org.eclipse.ui.examples.readmetool&quot;<br>
+&nbsp;&nbsp;&nbsp;version = "0.9"<br>
+&nbsp;&nbsp;&nbsp;provider-name = "Object Technology International, Inc."<br>
+&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.examples.readmetool.ReadmePlugin&quot;&gt;<br>
 <br>
-&nbsp;&nbsp;&nbsp; &lt;requires><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;import plugin=&quot;org.eclipse.ui&quot;/&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;import plugin=&quot;org.eclipse.core.resources&quot;/&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/requires><br>
+&nbsp;&nbsp;&nbsp;&lt;requires><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;import plugin=&quot;org.eclipse.ui&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;import plugin=&quot;org.eclipse.core.resources&quot;/&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/requires><br>
 <br>
-&nbsp;&nbsp;&nbsp; &lt;runtime><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;library name=&quot;readmetool.jar&quot;/&gt;&nbsp;<br>
-&nbsp;&nbsp;&nbsp; &lt;/runtime></P>
+&nbsp;&nbsp;&nbsp;&lt;runtime><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;library name=&quot;readmetool.jar&quot;/&gt;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&lt;/runtime><br>
+&lt;/plugin>
+</P>
 <P >
 The plug-in definition includes the name, id, version, and vendor name of the plug-in. We saw these parameters before in our hello world plug-in. The readme tool also defines a specialized plug-in class,
 <b>ReadmePlugin</b>. </P>
