--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
@@ -95,31 +95,24 @@ package org.eclipse.examples.helloworld;<br>
 <br>
 import org.eclipse.swt.widgets.Composite;<br>
 import org.eclipse.swt.widgets.Label;<br>
-import org.eclipse.swt.SWT;
-</P>
-<P CLASS="Code">
-import org.eclipse.ui.part.ViewPart;</P>
-<P CLASS="Code">
-<br>
+import org.eclipse.swt.SWT;<br>
+import org.eclipse.ui.part.ViewPart;<br>
 <br>
 public class HelloWorldView extends ViewPart {<br>
-&nbsp;&nbsp;&nbsp; Label label;<br>
-&nbsp;&nbsp;&nbsp; public HelloWorldView() {<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; public void createPartControl(Composite parent) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label = new Label(parent, SWT.WRAP);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label.setText(&quot;Hello World&quot;);<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; public void setFocus() {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // set focus to my widget.&nbsp; For
-a label, this doesn't<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // make much sense, but for more
-complex sets of widgets<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // you would decide which one gets
-the focus.<br>
-&nbsp;&nbsp;&nbsp; }</P>
-<P CLASS="Code">
-}</P>
+&nbsp;&nbsp;&nbsp;Label label;<br>
+&nbsp;&nbsp;&nbsp;public HelloWorldView() {<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;public void createPartControl(Composite parent) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label = new Label(parent, SWT.WRAP);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label.setText(&quot;Hello World&quot;);<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;public void setFocus() {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// set focus to my widget.&nbsp; For a label, this doesn't<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// make much sense, but for more complex sets of widgets<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// you would decide which one gets the focus.<br>
+&nbsp;&nbsp;&nbsp;}<br>
+}
+</P>
 <P >
 Notice that we didn't have to implement a <b> dispose()</b> method since we didn't do anything but create a label in the
 <b> createPartControl(parent)</b> method. If we had allocated any UI resources, such as images or fonts, we would have disposed of them here. Since we extended the
