--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_settings.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_settings.htm
@@ -21,33 +21,33 @@ The <a href="../reference/api/org/eclipse/jface/dialogs/package-summary.html"> <
 <a href="../reference/api/org/eclipse/jface/dialogs/DialogSettings.html"> <b> DialogSettings</b></a> will be created for you. When the plug-in is shut down, any settings that were added to it will be saved in an XML file and retrieved the next time the plug-in is started up.</P>
 <P >
 You can access your dialog settings anywhere in your plug-in code. The following snippet shows how you could obtain the dialog settings for the readme tool.</P>
-<P CLASS="Code">IDialogSettings settings =
-ReadmePlugin.getDefault().getDialogSettings();</P>
+<P CLASS="Code">
+IDialogSettings settings = ReadmePlugin.getDefault().getDialogSettings();
+</P>
 <P >
 Values are stored and retrieved using get and put methods. The get methods are named after the type of primitive that is being accessed. You can store and retrieve
 boolean, long, double, float, int, array, and string values. The following snippet shows how we could use dialog settings to initialize control values in a dialog.</P>
 <P CLASS="Code">
 protected Control createDialogArea(Composite parent) {<br>
-&nbsp;&nbsp;&nbsp; IDialogSettings settings =
-ReadmePlugin.getDefault().getDialogSettings();<br>
-&nbsp;&nbsp;&nbsp; checkbox = new Button(parent,SWT.CHECK);<br>
-&nbsp;&nbsp;&nbsp; checkbox.setText(&quot;Generate sample section titles&quot;);<br>
-&nbsp;&nbsp;&nbsp; // initialize the checkbox according to the dialog settings<br>
-&nbsp;&nbsp;&nbsp; checkbox.setSelection(settings.getBoolean(&quot;GenSections&quot;));<br>
-}</P>
+&nbsp;&nbsp;&nbsp;IDialogSettings settings = ReadmePlugin.getDefault().getDialogSettings();<br>
+&nbsp;&nbsp;&nbsp;checkbox = new Button(parent,SWT.CHECK);<br>
+&nbsp;&nbsp;&nbsp;checkbox.setText(&quot;Generate sample section titles&quot;);<br>
+&nbsp;&nbsp;&nbsp;// initialize the checkbox according to the dialog settings<br>
+&nbsp;&nbsp;&nbsp;checkbox.setSelection(settings.getBoolean(&quot;GenSections&quot;));<br>
+}
+</P>
 <P >
 The value of the setting can be stored later when the ok button is pressed.</P>
 <P CLASS="Code">
 protected void okPressed() {<br>
-&nbsp;&nbsp;&nbsp; IDialogSettings settings =
-ReadmePlugin.getDefault().getDialogSettings();<br>
-&nbsp;&nbsp;&nbsp; // store the value of the generate sections checkbox<br>
-&nbsp;&nbsp;&nbsp; settings.put(&quot;GenSections&quot;, checkbox.getSelection());<br>
-&nbsp;&nbsp;&nbsp; super.okPressed();<br>
-}</P>
-<P CLASS="Code">&nbsp;</P>
+&nbsp;&nbsp;&nbsp;IDialogSettings settings = ReadmePlugin.getDefault().getDialogSettings();<br>
+&nbsp;&nbsp;&nbsp;// store the value of the generate sections checkbox<br>
+&nbsp;&nbsp;&nbsp;settings.put(&quot;GenSections&quot;, checkbox.getSelection());<br>
+&nbsp;&nbsp;&nbsp;super.okPressed();<br>
+}
+</P>
 
-<p CLASS="Code"><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 
 </BODY>
 </HTML>
