--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
@@ -17,10 +17,11 @@ A minimal plug-in</H2>
 We all know what &quot;Hello World&quot; looks like in plain old Java without using any user interface or other framework.</P>
 <P CLASS="Code">
 public class HelloWorld {<br>
-&nbsp;&nbsp;&nbsp; public static void main(String[] args) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; System.out.println(&quot;Hello World&quot;);<br>
-&nbsp;&nbsp;&nbsp; }<br>
-}</P>
+&nbsp;&nbsp;&nbsp;public static void main(String[] args) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;System.out.println(&quot;Hello World&quot;);<br>
+&nbsp;&nbsp;&nbsp;}<br>
+}
+</P>
 <P >
 What happens to this old standard in the context of the Eclipse platform?  Instead of thinking of Hello World as a self-contained program, we recast it as an extension of the platform. Since we want to say hello to the world, we need to figure out how to extend the workbench to include our greeting.</P>
 <P >
@@ -54,31 +55,24 @@ package org.eclipse.examples.helloworld;<br>
 <br>
 import org.eclipse.swt.widgets.Composite;<br>
 import org.eclipse.swt.widgets.Label;<br>
-import org.eclipse.swt.SWT;
-</P>
-<P CLASS="Code">
-import org.eclipse.ui.part.ViewPart;</P>
-<P CLASS="Code">
-<br>
+import org.eclipse.swt.SWT;<br>
+import org.eclipse.ui.part.ViewPart;<br>
 <br>
 public class HelloWorldView extends ViewPart {<br>
-&nbsp;&nbsp;&nbsp; Label label;<br>
-&nbsp;&nbsp;&nbsp; public HelloWorldView() {<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; public void createPartControl(Composite parent) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label = new Label(parent, SWT.WRAP);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; label.setText(&quot;Hello World&quot;);<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; public void setFocus() {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // set focus to my widget.&nbsp; For
-a label, this doesn't<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // make much sense, but for more
-complex sets of widgets<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // you would decide which one gets
-the focus.<br>
-&nbsp;&nbsp;&nbsp; }</P>
-<P CLASS="Code">
-}</P>
+&nbsp;&nbsp;&nbsp;Label label;<br>
+&nbsp;&nbsp;&nbsp;public HelloWorldView() {<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;public void createPartControl(Composite parent) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label = new Label(parent, SWT.WRAP);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label.setText(&quot;Hello World&quot;);<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;public void setFocus() {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// set focus to my widget.&nbsp; For a label, this doesn't<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// make much sense, but for more complex sets of widgets<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// you would decide which one gets the focus.<br>
+&nbsp;&nbsp;&nbsp;}<br>
+}
+</P>
 <P >
 The view part creates the widgets that will represent it in the <b> createPartControl</b> method. In this example, we create an SWT label and set the &quot;Hello World&quot; text into it.&nbsp;</P>
 <P >
@@ -106,28 +100,28 @@ we are adding.</P>
 <P class="Code" >
 &lt;?xml version="1.0" ?><br>
 &lt;plugin<br>
-&nbsp;&nbsp;&nbsp; name="Hello World Example"&nbsp;<br>
-&nbsp;&nbsp;&nbsp; id=&quot;org.eclipse.examples.helloworld&quot;<br>
-&nbsp;&nbsp;&nbsp; version="1.0"<br>
-&nbsp;&nbsp;&nbsp; provider-name="Object Technology International, Inc."><br>
-&nbsp;&nbsp;&nbsp; &lt;requires><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;import plugin="org.eclipse.ui" /><br>
-&nbsp;&nbsp;&nbsp; &lt;/requires><br>
-&nbsp;&nbsp;&nbsp; &lt;runtime><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;library name="helloworld.jar" /><br>
-&nbsp;&nbsp;&nbsp; &lt;/runtime><br>
-&nbsp;&nbsp;&nbsp; &lt;extension point="org.eclipse.ui.views"><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;category&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;org.eclipse.examples.helloworld.hello&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name="Hello" /><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;view&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;org.eclipse.examples.helloworld.helloworldview&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name="Hello Greetings"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-category=&quot;org.eclipse.examples.helloworld.hello&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.examples.helloworld.HelloWorldView&quot; /><br>
-&nbsp;&nbsp;&nbsp; &lt;/extension><br>
-&lt;/plugin&gt;</P>
+&nbsp;&nbsp;&nbsp;name="Hello World Example"&nbsp;<br>
+&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.examples.helloworld&quot;<br>
+&nbsp;&nbsp;&nbsp;version="1.0"<br>
+&nbsp;&nbsp;&nbsp;provider-name="Object Technology International, Inc."><br>
+&nbsp;&nbsp;&nbsp;&lt;requires><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;import plugin="org.eclipse.ui" /><br>
+&nbsp;&nbsp;&nbsp;&lt;/requires><br>
+&nbsp;&nbsp;&nbsp;&lt;runtime><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;library name="helloworld.jar" /><br>
+&nbsp;&nbsp;&nbsp;&lt;/runtime><br>
+&nbsp;&nbsp;&nbsp;&lt;extension point="org.eclipse.ui.views"><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;category&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.examples.helloworld.hello&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name="Hello" /><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;view&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.examples.helloworld.helloworldview&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name="Hello Greetings"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;category=&quot;org.eclipse.examples.helloworld.hello&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.examples.helloworld.HelloWorldView&quot; /><br>
+&nbsp;&nbsp;&nbsp;&lt;/extension><br>
+&lt;/plugin&gt;
+</P>
 <P >
 In this file, we define the <b>name</b>, <b>id</b>,
 <b>version</b>, and <b>provider-name</b> for our plug-in. </P>
