--- a/bundles/org.eclipse.platform.doc.isv/guide/help_nls.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_nls.htm
@@ -17,19 +17,23 @@ Externalizing Strings</H2>
 by replacing the string with a key (e.g. <b>%pluginName</b>) and creating an entry in the
 <b> plugin.properties</b> file of the form: </P>
 <P CLASS="Code">
-&nbsp;pluginName = &quot;Online Help Sample Plugin&quot; </P>
+pluginName = &quot;Online Help Sample Plugin&quot;
+</P>
 <P >
 The contribution XML files are externalized using a similar approach. To externalize&nbsp; </P>
-<P class="Code" >
-<b> &lt;topic id=&quot;plainTasks&quot; label=&quot;Plain Stuff&quot;&gt;</b>&nbsp; </P>
+<P class="Code">
+&lt;topic id=&quot;plainTasks&quot; label=&quot;Plain Stuff&quot;&gt;
+</P>
 <P >
  we replace its label with a key <b> %plainStuff</b> . Our topic now looks like: </P>
 <P CLASS="Code">
-&lt;topic id=&quot;plainTasks&quot; label=&quot;<b>%plainStuff</b>&quot;&gt;</P>
+&lt;topic id=&quot;plainTasks&quot; label=&quot;<b>%plainStuff</b>&quot;&gt;
+</P>
 <P >
 We create an entry in the <b> doc.properties</b> file: </P>
 <P CLASS="Code">
-plainStuff = Plain Stuff</P>
+plainStuff = Plain Stuff
+</P>
 <P >
 The help system will use <b> document.properties</b> when looking up strings externalized by online help contributions. </P>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
