--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin.htm
@@ -21,18 +21,19 @@ and structure of these files is completely up to the documentation team. Once th
 We start by assuming that the documentation has already been provided in the following tree.</P>
 <P CLASS="Code">
 doc/<br>
-&nbsp;&nbsp;&nbsp; concepts/<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; concept1.html<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; concept1_1.html<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; concept1_2.html<br>
-&nbsp;&nbsp;&nbsp; tasks/<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; task1.html<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; task2.html<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; task3_1.html<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; task3_2.html<br>
-&nbsp;&nbsp;&nbsp; ref/<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ref1.html<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ref2.html </P>
+&nbsp;&nbsp;&nbsp;concepts/<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;concept1.html<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;concept1_1.html<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;concept1_2.html<br>
+&nbsp;&nbsp;&nbsp;tasks/<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;task1.html<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;task2.html<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;task3_1.html<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;task3_2.html<br>
+&nbsp;&nbsp;&nbsp;ref/<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ref1.html<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ref2.html
+</P>
 <P >
 We will assume that the plug-in name is <b>com.example.helpexample</b>.</P>
 <P >
@@ -42,16 +43,15 @@ sub tree shown above should be copied into the directory. </P>
 <P >
 Documentation plug-ins need a manifest just like code plug-ins. The following markup defines the documentation plug-in.</P>
 
-<P class="Code" >&lt;?xml version=&quot;1.0&quot; ?&gt;<br>
+<P class="Code" >
+&lt;?xml version=&quot;1.0&quot; ?&gt;<br>
 &lt;plugin name=&quot;Online Help Sample&quot;<br>
-&nbsp;&nbsp;&nbsp; id=&quot;com.example.helpexample&quot;<br>
-&nbsp;&nbsp;&nbsp; version=&quot;1.0&quot;</P>
+&nbsp;&nbsp;&nbsp;id=&quot;com.example.helpexample&quot;<br>
+&nbsp;&nbsp;&nbsp;version=&quot;1.0&quot;<br>
+&nbsp;&nbsp;&nbsp;provider-name=&quot;MyExample&quot; /&gt;
+</P>
 
-<P class="Code" >&nbsp;&nbsp;&nbsp; provider-name=&quot;MyExample&quot; /&gt;</P>
-
-<p CLASS="Code">&nbsp;</p>
-
-<p CLASS="Code"><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 
 </BODY>
 </HTML>
