--- a/bundles/org.eclipse.platform.doc.isv/guide/jface_actions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/jface_actions.htm
@@ -31,9 +31,9 @@ You should not directly implement the <a href="../reference/api/org/eclipse/jfac
 <b><a href="../reference/api/org/eclipse/jface/action/Action.html"> Action</a></b> class. Browse the subclasses of this class to see many of the common patterns for actions. The code below implements the &quot;About&quot; action. It is one of the simpler actions in the workbench.</P>
 <P CLASS="Code">
 public void run() {<br>
-&nbsp;&nbsp;&nbsp; new AboutDialog(workbenchWindow.getShell()).open();</P>
-<P CLASS="Code">
-}</P>
+&nbsp;&nbsp;&nbsp;new AboutDialog(workbenchWindow.getShell()).open();<br>
+}
+</P>
 <P >
 Earlier we saw the workbench interfaces <b><a href="../reference/api/org/eclipse/ui/IViewActionDelegate.html"> IViewActionDelegate</a></b> and
 <b><a href="../reference/api/org/eclipse/ui/IEditorActionDelegate.html">IEditorActionDelegate</a></b>. These interfaces are used when contributing view actions or editor actions to the workbench. The workbench action delegates are initialized with a reference to their associated view or editor. With this knowledge, they can navigate to the workbench page or window, accessing selections or any other information needed to perform the action. </P>
