--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_builders.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_builders.htm
@@ -86,35 +86,32 @@ incremental project builder to the platform. The following markup shows how the 
 incremental project builder.</P>
 <P class="Code" >
 &lt;extension<br>
-&nbsp;&nbsp;&nbsp; point=&quot;org.eclipse.core.resources.builders&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;builder<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;com.example.builders&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name=&quot;MyBuilder&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;run&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;com.example.builders.BuilderExample&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;parameter
-name=&quot;optimize&quot; value=&quot;true&quot; /&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;parameter
-name=&quot;comment&quot; value=&quot;Builder comment&quot; /&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/run&gt;</P>
-<P class="Code" >
-&nbsp;&nbsp;&nbsp; &lt;/builder&gt;</P>
-<P class="Code" >
-&lt;/extension&gt;</P>
+&nbsp;&nbsp;&nbsp;point=&quot;org.eclipse.core.resources.builders&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;builder<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;com.example.builders&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name=&quot;MyBuilder&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;run&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;com.example.builders.BuilderExample&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;parameter name=&quot;optimize&quot; value=&quot;true&quot; /&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;parameter name=&quot;comment&quot; value=&quot;Builder comment&quot; /&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;/run&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/builder&gt;<br>
+&lt;/extension&gt;
+</P>
 <P >
 The class identified in the extension point must extend the platform class <b><a href="../reference/api/org/eclipse/core/resources/IncrementalProjectBuilder.html">IncrementalProjectBuilder</a></b>. </P>
 <P CLASS="Code">
 public class BuilderExample extends IncrementalProjectBuilder {<br>
-&nbsp;&nbsp;&nbsp; IProject[] build(int kind, Map args, IProgressMonitor monitor)<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; throws CoreException {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// add your
-build logic here<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return null;<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; protected void startupOnInitialize() {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // add builder init logic here<br>
-&nbsp;&nbsp;&nbsp; }<br>
-}</P>
+&nbsp;&nbsp;&nbsp;IProject[] build(int kind, Map args, IProgressMonitor monitor)<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;throws CoreException {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// add your build logic here<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return null;<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;protected void startupOnInitialize() {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// add builder init logic here<br>
+&nbsp;&nbsp;&nbsp;}<br>
+}
+</P>
 <P >
 Build processing begins with the <b> build()</b> method, which includes information about the kind of build that has been requested,
 <b>FULL_BUILD</b>, <b>INCREMENTAL_BUILD</b>, or
@@ -122,24 +119,20 @@ Build processing begins with the <b> build()</b> method, which includes informat
 <b> build() </b> method.</P>
 <P CLASS="Code">
 protected IProject[] build(int kind, Map args, IProgressMonitor monitor<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; throws CoreException {<br>
-&nbsp;&nbsp;&nbsp; if (kind ==
-IncrementalProjectBuilder.FULL_BUILD) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; fullBuild(monitor);<br>
-&nbsp;&nbsp;&nbsp; } else {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; IResourceDelta delta =
-getDelta(getProject());<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; if (delta == null)
-{<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-fullBuild(monitor);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; } else {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-incrementalBuild(delta, monitor);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; return null;<br>
-}</P>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;throws CoreException {<br>
+&nbsp;&nbsp;&nbsp;if (kind == IncrementalProjectBuilder.FULL_BUILD) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fullBuild(monitor);<br>
+&nbsp;&nbsp;&nbsp;} else {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IResourceDelta delta = getDelta(getProject());<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if (delta == null) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fullBuild(monitor);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;} else {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;incrementalBuild(delta, monitor);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;return null;<br>
+}
+</P>
 
 <P>It sometimes happens that when building project &quot;X,&quot; a builder
 needs information about changes in some other project &quot;Y.&quot;&nbsp; (For
@@ -159,21 +152,22 @@ even examining other projects if there are dependencies between projects.&nbsp; 
 suggests how a full build might be implemented.</P>
 <P CLASS="Code">
 protected void fullBuild(final IProgressMonitor monitor) throws CoreException {<br>
-&nbsp;&nbsp;&nbsp; try {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; getProject().accept(new
-MyBuildVisitor());<br>
-&nbsp;&nbsp;&nbsp; } catch (CoreException e) { }<br>
-}</P>
+&nbsp;&nbsp;&nbsp;try {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;getProject().accept(new MyBuildVisitor());<br>
+&nbsp;&nbsp;&nbsp;} catch (CoreException e) { }<br>
+}
+</P>
 <P >
 The build visitor would perform the build for the specific resource (and answer true to continue visiting all child resources).</P>
 <P CLASS="Code">
 class MyBuildVisitor implements IResourceVisitor {<br>
-&nbsp;&nbsp;&nbsp; public boolean visit(IResource res) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; //build the specified resource.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; //return true to continue visiting children.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; return true;<br>
-&nbsp;&nbsp;&nbsp; }<br>
-}</P>
+&nbsp;&nbsp;&nbsp;public boolean visit(IResource res) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//build the specified resource.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;//return true to continue visiting children.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return true;<br>
+&nbsp;&nbsp;&nbsp;}<br>
+}
+</P>
 <P >
 The visit process continues until the full resource tree has been traveled.</P>
 
@@ -185,10 +179,11 @@ When performing an incremental build, you work with a resource change delta inst
 whole project.</P>
 <P CLASS="Code">
 protected void incrementalBuild(IResourceDelta delta,&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; IProgressMonitor monitor) throws CoreException {<br>
-&nbsp;&nbsp;&nbsp; // the visitor does the work.<br>
-&nbsp;&nbsp;&nbsp; delta.accept(new MyBuildDeltaVisitor());<br>
-}</P>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IProgressMonitor monitor) throws CoreException {<br>
+&nbsp;&nbsp;&nbsp;// the visitor does the work.<br>
+&nbsp;&nbsp;&nbsp;delta.accept(new MyBuildDeltaVisitor());<br>
+}
+</P>
 <P >
 Note that for an incremental build, the build visitor works with a resource delta tree instead of a complete resource tree. </P>
 <P >
@@ -214,23 +209,24 @@ ICommand[] commands = desc.getBuildSpec();<br>
 boolean found = false;<br>
 <br>
 for (int i = 0; i &lt; commands.length; ++i) {<br>
-&nbsp;&nbsp;&nbsp; if (commands[i].getBuilderName().equals(BUILDER_ID)) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; found = true;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; break;<br>
-&nbsp;&nbsp;&nbsp; }<br>
+&nbsp;&nbsp;&nbsp;if (commands[i].getBuilderName().equals(BUILDER_ID)) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;found = true;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;break;<br>
+&nbsp;&nbsp;&nbsp;}<br>
 }<br>
 if (!found) {&nbsp;<br>
-&nbsp;&nbsp;&nbsp; //add builder to project<br>
-&nbsp;&nbsp;&nbsp; ICommand command = desc.newCommand();<br>
-&nbsp;&nbsp;&nbsp; command.setBuilderName(BUILDER_ID);<br>
-&nbsp;&nbsp;&nbsp; ICommand[] newCommands = new ICommand[commands.length + 1];<br>
+&nbsp;&nbsp;&nbsp;//add builder to project<br>
+&nbsp;&nbsp;&nbsp;ICommand command = desc.newCommand();<br>
+&nbsp;&nbsp;&nbsp;command.setBuilderName(BUILDER_ID);<br>
+&nbsp;&nbsp;&nbsp;ICommand[] newCommands = new ICommand[commands.length + 1];<br>
 <br>
-&nbsp;&nbsp;&nbsp; // Add it before other builders.<br>
-&nbsp;&nbsp;&nbsp; System.arraycopy(commands, 0, newCommands, 1, commands.length);<br>
-&nbsp;&nbsp;&nbsp; newCommands[0] = command;<br>
-&nbsp;&nbsp;&nbsp; desc.setBuildSpec(newCommands);<br>
-&nbsp;&nbsp;&nbsp; project.setDescription(desc, null);<br>
-}</P>
+&nbsp;&nbsp;&nbsp;// Add it before other builders.<br>
+&nbsp;&nbsp;&nbsp;System.arraycopy(commands, 0, newCommands, 1, commands.length);<br>
+&nbsp;&nbsp;&nbsp;newCommands[0] = command;<br>
+&nbsp;&nbsp;&nbsp;desc.setBuildSpec(newCommands);<br>
+&nbsp;&nbsp;&nbsp;project.setDescription(desc, null);<br>
+}
+</P>
 <P >
 Configuring a project's builder is done just once, usually as the project is being created.</P>
 
