--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_graphics.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_graphics.htm
@@ -143,16 +143,17 @@ When you receive a paint event, you will be supplied with a <b><a href="../refer
 Any other graphics objects must be allocated while handling the event (or
 beforehand). Below is a snippet based on the
 <b> org.eclipse.swt.examples.HelloWorld5</b> sample. The color red was previously allocated when creating the widget, so it can be used here.</P>
-<P CLASS="Code">shell.addPaintListener(new PaintListener () {<br>
-&nbsp;&nbsp;&nbsp; public void paintControl(PaintEvent event){<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GC gc = event.gc;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; gc.setForeground(red);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rectangle rect =
-event.widget.getClientArea();<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; gc.drawRectangle(rect.x + 10, rect.y + 10, rect.width - 20, rect.height - 20);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; gc.drawString(resHello.getString(&quot;Hello_world&quot;), rect.x + 20, rect.y + 20);<br>
-&nbsp;&nbsp;&nbsp; }<br>
-});</P>
+<P CLASS="Code">
+shell.addPaintListener(new PaintListener () {<br>
+&nbsp;&nbsp;&nbsp;public void paintControl(PaintEvent event){<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GC gc = event.gc;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gc.setForeground(red);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Rectangle rect = event.widget.getClientArea();<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gc.drawRectangle(rect.x + 10, rect.y + 10, rect.width - 20, rect.height - 20);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gc.drawString(resHello.getString(&quot;Hello_world&quot;), rect.x + 20, rect.y + 20);<br>
+&nbsp;&nbsp;&nbsp;}<br>
+});
+</P>
 
 
 <H4>
@@ -163,22 +164,22 @@ Every graphics object that you allocate must be freed when you are finished usin
 The timing of the disposal depends on when you created the object. If you create a graphics object while creating your widget, you should generally add a dispose listener onto the widget and dispose of the graphics when the widget is disposed. If you create an object on the fly while painting, you should dispose of it when finished painting.</P>
 <P >
 The next code snippet shows a slightly modified version of our paint listener. In this example, it allocates and frees the color red while painting.</P>
-<P CLASS="Code">shell.addPaintListener(new PaintListener () {<br>
-&nbsp;&nbsp;&nbsp; public void paintControl(PaintEvent event){<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GC gc = event.gc;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Color red = new Color(event.widget.getDisplay(), 0xFF, 0, 0);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; gc.setForeground(red);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rectangle rect =
-event.widget.getClientArea();<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; gc.drawRectangle(rect.x + 10, rect.y + 10, rect.width - 20, rect.height - 20);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; gc.drawString(resHello.getString(&quot;Hello_world&quot;), rect.x + 20, rect.y + 20);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; red.dispose();<br>
-&nbsp;&nbsp;&nbsp; }<br>
-});</P>
-<P CLASS="Code">&nbsp;</P>
+<P CLASS="Code">
+shell.addPaintListener(new PaintListener () {<br>
+&nbsp;&nbsp;&nbsp;public void paintControl(PaintEvent event){<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GC gc = event.gc;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Color red = new Color(event.widget.getDisplay(), 0xFF, 0, 0);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gc.setForeground(red);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Rectangle rect = event.widget.getClientArea();<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gc.drawRectangle(rect.x + 10, rect.y + 10, rect.width - 20, rect.height - 20);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;gc.drawString(resHello.getString(&quot;Hello_world&quot;), rect.x + 20, rect.y + 20);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;red.dispose();<br>
+&nbsp;&nbsp;&nbsp;}<br>
+});
+</P>
 
 
-<p CLASS="Code"><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 
 
 </BODY>
