--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
@@ -57,17 +57,18 @@ Note:&nbsp; SWT will trigger an <b> SWTException</b> for any calls made from a n
 The main thread, including the event loop, for an SWT application looks like this:</P>
 <P CLASS="Code">
 public static void main(String [] args) {<br>
-&nbsp;&nbsp;&nbsp; Display display = new Display();<br>
-&nbsp;&nbsp;&nbsp; Shell shell = new Shell(display);<br>
-&nbsp;&nbsp;&nbsp; shell.open();<br>
-&nbsp;&nbsp;&nbsp; // start the event loop. We stop when the user has done<br>
-&nbsp;&nbsp;&nbsp; // something to dispose our window.<br>
-&nbsp;&nbsp;&nbsp; while (!shell.isDisposed()) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; if (!display.readAndDispatch())<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; display.sleep();<br>
-&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; display.dispose();<br>
-}</P>
+&nbsp;&nbsp;&nbsp;Display display = new Display();<br>
+&nbsp;&nbsp;&nbsp;Shell shell = new Shell(display);<br>
+&nbsp;&nbsp;&nbsp;shell.open();<br>
+&nbsp;&nbsp;&nbsp;// start the event loop. We stop when the user has done<br>
+&nbsp;&nbsp;&nbsp;// something to dispose our window.<br>
+&nbsp;&nbsp;&nbsp;while (!shell.isDisposed()) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if (!display.readAndDispatch())<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;display.sleep();<br>
+&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;display.dispose();<br>
+}
+</P>
 <P >
 Once the widgets are created and the shell is opened, the application reads and dispatches events from the OS queue until the shell window is disposed. If there are no events available for us in the queue, we tell the display to sleep to give other applications a chance to run.</P>
 <P CLASS="Note">
@@ -96,12 +97,13 @@ The following code snippet demonstrates the pattern for using these methods.</P>
 // now update the UI. We don't depend on the result,<br>
 // so use async.<br>
 Display.getCurrent().asyncExec(new Runnable() {<br>
-&nbsp;&nbsp;&nbsp; public void run() {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; myWindow.redraw();<br>
-&nbsp;&nbsp;&nbsp; }<br>
-	});<br>
+&nbsp;&nbsp;&nbsp;public void run() {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;myWindow.redraw();<br>
+&nbsp;&nbsp;&nbsp;}<br>
+});<br>
 // now do more computations<br>
-...</P>
+...
+</P>
 
 
 <H3>
