--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_elementFactories.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_elementFactories.htm
@@ -31,14 +31,15 @@ The platform defines a technique for dynamically querying an object for its impl
 By providing a facility to dynamically query an adapter for an object, we can also improve the flexibility of the system as it evolves. New adapters can be registered for platform types by new plug-ins without having to change the definitions of the original types. The pattern is to ask an object for a particular adapter. </P>
 <P CLASS="Code">
 //given an object o, we want to do &quot;workbench&quot; things with it.<br>
-	if (!(o instanceof IAdaptable)) {<br>
-&nbsp;&nbsp;&nbsp; return null;<br>
+if (!(o instanceof IAdaptable)) {<br>
+&nbsp;&nbsp;&nbsp;return null;<br>
 }<br>
 IWorkbenchAdapter adapter = (IWorkbenchAdapter)o.getAdapter(IWorkbenchAdapter.class);<br>
-	if (adapter == null)<br>
-&nbsp;&nbsp;&nbsp; return null;<br>
+if (adapter == null)<br>
+&nbsp;&nbsp;&nbsp;return null;<br>
 // now I can treat o as an IWorkbenchAdapter<br>
-...</P>
+...
+</P>
 <P >
 If there is no adapter registered for the object in hand, null will be returned as the adapter. Clients must be prepared to handle this case. This allows clients to gracefully handle the case where an expected adapter has not been registered.</P>
 <P >
@@ -70,20 +71,25 @@ The markup is pretty simple. We just have to specify the id of the factory and t
 The following code snippet is from the workbench <b>plugin.xml</b>.</P>
 <P class="Code" >
 &lt;extension<br>
-&nbsp;&nbsp;&nbsp; point = &quot;org.eclipse.ui.elementFactories&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;factory id =&quot;org.eclipse.ui.internal.model.ResourceFactory&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.internal.model.ResourceFactory&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/factory><br>
-&nbsp;&nbsp;&nbsp; &lt;factory id =&quot;org.eclipse.ui.internal.model.WorkspaceFactory&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.internal.model.WorkspaceFactory&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/factory><br>
-&nbsp;&nbsp;&nbsp; &lt;factory id =&quot;org.eclipse.ui.part.FileEditorInputFactory&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.part.FileEditorInputFactory&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/factory><br>
-&nbsp;&nbsp;&nbsp; &lt;factory id =&quot;org.eclipse.ui.internal.dialogs.WelcomeEditorInputFactory&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.internal.dialogs.WelcomeEditorInputFactory&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/factory><br>
-&lt;/extension></P>
+&nbsp;&nbsp;&nbsp;point = &quot;org.eclipse.ui.elementFactories&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;factory<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id =&quot;org.eclipse.ui.internal.model.ResourceFactory&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.internal.model.ResourceFactory&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/factory><br>
+&nbsp;&nbsp;&nbsp;&lt;factory<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id =&quot;org.eclipse.ui.internal.model.WorkspaceFactory&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.internal.model.WorkspaceFactory&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/factory><br>
+&nbsp;&nbsp;&nbsp;&lt;factory<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id =&quot;org.eclipse.ui.part.FileEditorInputFactory&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.part.FileEditorInputFactory&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/factory><br>
+&nbsp;&nbsp;&nbsp;&lt;factory<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id =&quot;org.eclipse.ui.internal.dialogs.WelcomeEditorInputFactory&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.internal.dialogs.WelcomeEditorInputFactory&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/factory><br>
+&lt;/extension>
+</P>
 
 
 
