--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectives.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectives.htm
@@ -31,13 +31,14 @@ extension point.</P>
 The specification of the perspective in the <b> plugin.xml</b> is straightforward. The following markup is used by the workbench in defining its own resource perspective.</P>
 <P class="Code" >
 &lt;extension<br>
-&nbsp;&nbsp;&nbsp; point=&quot;org.eclipse.ui.perspectives&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;perspective<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;org.eclipse.ui.resourcePerspective&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name="Resource"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.internal.ResourcePerspective&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/perspective><br>
-&lt;/extension></P>
+&nbsp;&nbsp;&nbsp;point=&quot;org.eclipse.ui.perspectives&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;perspective<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.ui.resourcePerspective&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name="Resource"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.internal.ResourcePerspective&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/perspective><br>
+&lt;/extension>
+</P>
 <P >
 A plug-in must supply an <b> id</b> and <b> name</b> for the perspective, along with the name of the
 <b> class</b> that implements the perspective. An <b> icon</b> can also be specified. The perspective class should implement
