--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_editorActions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_editorActions.htm
@@ -23,28 +23,23 @@ In the readme example, the plug-in uses the <b>editorActions</b>
 extension point to contribute additional actions to the menu contributed by the
 readme editor. The definition in our
 <b> plugin.xml</b> should look pretty familiar by now.</P>
-<P class="Code" >
+<P class="Code">
 &lt;extension<br>
-&nbsp;&nbsp;&nbsp; point = &quot;org.eclipse.ui.editorActions&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;editorContribution&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id="org.eclipse.ui.examples.readmetool.ec1"&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; targetID=&quot;org.eclipse.ui.examples.readmetool.ReadmeEditor&quot;&gt;&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&lt;action id="org.eclipse.ui.examples.readmetool.ea1"&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-label="&amp;amp;Readme Editor Extension"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-toolbarPath=&quot;ReadmeEditor&quot;&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-icon=&quot;icons/basic/obj16/editor.gif&quot;&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-tooltip=&quot;Run Readme Editor Extension"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-class=&quot;org.eclipse.ui.examples.readmetool.EditorActionDelegate&quot;&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-/>&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/editorContribution&gt;<br>
- &lt;/extension></P>
+&nbsp;&nbsp;&nbsp;point = &quot;org.eclipse.ui.editorActions&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;editorContribution&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id="org.eclipse.ui.examples.readmetool.ec1"&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;targetID=&quot;org.eclipse.ui.examples.readmetool.ReadmeEditor&quot;&gt;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;action<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id="org.eclipse.ui.examples.readmetool.ea1"&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;label="&amp;amp;Readme Editor Extension"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;toolbarPath=&quot;ReadmeEditor&quot;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;icon=&quot;icons/basic/obj16/editor.gif&quot;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;tooltip=&quot;Run Readme Editor Extension"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.examples.readmetool.EditorActionDelegate&quot;&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/><br>
+&nbsp;&nbsp;&nbsp;&lt;/editorContribution&gt;<br>
+&lt;/extension>
+</P>
 <P >Similar to a view action, the extension must specify the <b> targetID</b> of the
 editor to which it is contributing actions.&nbsp; The action itself is very
 similar to a view action (<b>id</b>, <b>label</b>, and
@@ -62,11 +57,13 @@ The readme tool supplies <b> EditorActionDelegate</b>
 to implement the action.&nbsp; This is very similar to the view action delegate
 we saw earlier.</P>
 
-<p class="Code">public void run(IAction action) {<br>
-&nbsp;&nbsp;&nbsp; MessageDialog.openInformation(editor.getSite().getShell(),<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "Readme Editor",&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "Editor Action executed");<br>
-}</p>
+<p class="Code">
+public void run(IAction action) {<br>
+&nbsp;&nbsp;&nbsp;MessageDialog.openInformation(editor.getSite().getShell(),<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"Readme Editor",&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"Editor Action executed");<br>
+}
+</p>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="195" height="12"></a></p>
 
