--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_views.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_views.htm
@@ -34,20 +34,21 @@ can choose to extend the
 We implemented a minimal view extension in the hello world example. Now we'll look at one that is aware of other workbench views and responds to user navigation and selection in the workbench. First,
 let's take a look at the declaration of the extension in the <b>plugin.xml</b>.</P>
 <P class="Code" >
-   &lt;extension<br>
-&nbsp;&nbsp;&nbsp; point="org.eclipse.ui.views"><br>
-&nbsp;&nbsp;&nbsp; &lt;category&nbsp;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;org.eclipse.ui.examples.readmetool&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name="&amp;amp;Readme&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/category><br>
-&nbsp;&nbsp;&nbsp; &lt;view<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; id=&quot;org.eclipse.ui.examples.readmetool.views.SectionsView&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; name="Readme Sections"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; icon=&quot;icons/basic/view16/sections.gif&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; category=&quot;org.eclipse.ui.examples.readmetool&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; class=&quot;org.eclipse.ui.examples.readmetool.ReadmeSectionsView&quot;&gt;<br>
-&nbsp;&nbsp;&nbsp; &lt;/view><br>
-   &lt;/extension></P>
+&lt;extension<br>
+&nbsp;&nbsp;&nbsp;point="org.eclipse.ui.views"><br>
+&nbsp;&nbsp;&nbsp;&lt;category&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.ui.examples.readmetool&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name="&amp;amp;Readme&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/category><br>
+&nbsp;&nbsp;&nbsp;&lt;view<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;id=&quot;org.eclipse.ui.examples.readmetool.views.SectionsView&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name="Readme Sections"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;icon=&quot;icons/basic/view16/sections.gif&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;category=&quot;org.eclipse.ui.examples.readmetool&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class=&quot;org.eclipse.ui.examples.readmetool.ReadmeSectionsView&quot;&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;/view><br>
+&lt;/extension>
+</P>
 <P >
 This should look pretty familiar. We see that a new view, <b>ReadmeSectionsView</b>, is contributed to the workbench. The
 <b>view id</b>, <b>name</b>,
@@ -72,25 +73,27 @@ that represent a view are created.&nbsp; We'll ignore some of the code to get
 started.</P>
 <P CLASS="Code">
 public void createPartControl(Composite parent) {<br>
-&nbsp;&nbsp;&nbsp; viewer = new ListViewer(parent);<br>
-&nbsp;&nbsp;&nbsp; ...<br>
-&nbsp;&nbsp;&nbsp; // add myself as a global selection listener<br>
-&nbsp;&nbsp;&nbsp; getSite().getPage().addSelectionListener(this);<br>
+&nbsp;&nbsp;&nbsp;viewer = new ListViewer(parent);<br>
+&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;// add myself as a global selection listener<br>
+&nbsp;&nbsp;&nbsp;getSite().getPage().addSelectionListener(this);<br>
 <br>
-&nbsp;&nbsp;&nbsp; // prime the selection<br>
-&nbsp;&nbsp;&nbsp; selectionChanged(null, getSite().getPage().getSelection());<br>
-}</P>
+&nbsp;&nbsp;&nbsp;// prime the selection<br>
+&nbsp;&nbsp;&nbsp;selectionChanged(null, getSite().getPage().getSelection());<br>
+}
+</P>
 <P >
 The view creates and stores a ListViewer and registers itself as a selection listener
 on its page. It obtains the page from an
 <b><a href="../reference/api/org/eclipse/ui/IViewSite.html">IViewSite</a></b>, which contains information about the view's context, such as its workbench window, containing page, and plug-in. When we are notified of a selection change, what happens?&nbsp;
 The following code is executed:</P>
-<p CLASS="Code">public void selectionChanged(IWorkbenchPart part, ISelection sel) {<br>
-&nbsp;&nbsp;&nbsp; //if the selection is a readme file, get its sections.<br>
-&nbsp;&nbsp;&nbsp; AdaptableList input =
-ReadmeModelFactory.getInstance().getSections(sel);<br>
-&nbsp;&nbsp;&nbsp; viewer.setInput(input);<br>
-}</p>
+<p CLASS="Code">
+public void selectionChanged(IWorkbenchPart part, ISelection sel) {<br>
+&nbsp;&nbsp;&nbsp;//if the selection is a readme file, get its sections.<br>
+&nbsp;&nbsp;&nbsp;AdaptableList input = ReadmeModelFactory.getInstance().getSections(sel);<br>
+&nbsp;&nbsp;&nbsp;viewer.setInput(input);<br>
+}
+</p>
 <P >
 It looks like the <b> ReadmeModelFactory</b> class is involved in turning the selection into readme sections, which are understood to be input for
 the viewer that we created in the <b>createPartControl</b>
@@ -103,27 +106,27 @@ If you must know right now what this viewer is all about, go to <a HREF="jface_v
 (It is a ListViewer, after all.)&nbsp; But how did we know when we had a readme file and where did the
 section information for the viewer come from? A quick look at the
 <b> ReadmeModelFactory</b> sheds some light.</P>
-<p CLASS="Code">public AdaptableList getSections(ISelection sel) {<br>
-&nbsp;&nbsp;&nbsp; // If sel is not a structured selection just return.<br>
-&nbsp;&nbsp;&nbsp; if (!(sel instanceof IStructuredSelection))<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; return null;<br>
-&nbsp;&nbsp;&nbsp; IStructuredSelection structured = (IStructuredSelection)sel;<br>
+<p CLASS="Code">
+public AdaptableList getSections(ISelection sel) {<br>
+&nbsp;&nbsp;&nbsp;// If sel is not a structured selection just return.<br>
+&nbsp;&nbsp;&nbsp;if (!(sel instanceof IStructuredSelection))<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return null;<br>
+&nbsp;&nbsp;&nbsp;IStructuredSelection structured = (IStructuredSelection)sel;<br>
 <br>
-&nbsp;&nbsp;&nbsp; //if the selection is a readme file, get its sections.<br>
-&nbsp;&nbsp;&nbsp; Object object = structured.getFirstElement();<br>
-&nbsp;&nbsp;&nbsp; if (object instanceof IFile) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; IFile file = (IFile) object;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; String extension =
-file.getFileExtension();<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; if (extension != null &amp;&amp; extension.equals(IReadmeConstants.EXTENSION)) {<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; return
-getSections(file);<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; }<br>
-&nbsp;&nbsp;&nbsp; }<br>
+&nbsp;&nbsp;&nbsp;//if the selection is a readme file, get its sections.<br>
+&nbsp;&nbsp;&nbsp;Object object = structured.getFirstElement();<br>
+&nbsp;&nbsp;&nbsp;if (object instanceof IFile) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IFile file = (IFile) object;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;String extension = file.getFileExtension();<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;if (extension != null &amp;&amp; extension.equals(IReadmeConstants.EXTENSION)) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;return getSections(file);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;}<br>
+&nbsp;&nbsp;&nbsp;}<br>
 <br>
-&nbsp;&nbsp;&nbsp; //the selected object is not a readme file<br>
-&nbsp;&nbsp;&nbsp; return null;<br>
-}</p>
+&nbsp;&nbsp;&nbsp;//the selected object is not a readme file<br>
+&nbsp;&nbsp;&nbsp;return null;<br>
+}
+</p>
 <P >We check the selection to see if it is a structured (multiple)
 selection.&nbsp; (The concept of a structured selection comes from JFace <a href="jface_viewers.htm">viewers</a>.)&nbsp;
 For the first object in the selection, we check to see whether it is a file (<b><a href="../reference/api/org/eclipse/core/resources/IFile.html">IFile</a></b>)
